[project]
name = "builder"
authors = [
    { name = "Suraj Shetty", email = "suraj@frappe.io"}
]
description = "Modern website builder for modern web pages"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://frappe.io/builder"
Repository = "https://github.com/frappe/builder.git"
"Bug Reports" = "https://github.com/frappe/builder/issues"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
